It does not matter how slowly you go as long as you do not stop.
-- Confucius

First they ignore you, then they laugh at you, then they fight you,
then you win. –- Mahatma Gandhi

Sun, Feb 15, 2008
---------------------------------------------------------------------
- Implemented adding comments for campaign.

Sat, Feb 14, 2008
---------------------------------------------------------------------
- More design work on campaign landing page (adding comments, etc.)

Fri, Feb 13, 2008
---------------------------------------------------------------------
- Implemented Campaign Summary sidebar for the campaign landing page.
- Generated [Comment] scaffold and created database migration.
- Added [acts_as_commentable] to core models.
- Added visible/invisible helpers to flip element's visibility style.

Thu, Feb 12, 2008
---------------------------------------------------------------------
- Installed [acts_as_commentable] plugin.
- More work designing simple and consistent landing pages.

Wed, Feb 11, 2008
---------------------------------------------------------------------
- Researching and mocking up landing pages for campaigns and leads.

Tue, Feb 10, 2008
---------------------------------------------------------------------
- Implemented creating and assigning tasks for the specific date from the calendar.

Mon, Feb 9, 2008
---------------------------------------------------------------------
- Converted remaining forms to HAML and the stylesheet to SASS.

Sun, Feb 8, 2008
---------------------------------------------------------------------
- Added custom logger to highlight logged messages.
- Added [task_at_hint] field to [tasks] table to capture due date request.
- Refactored task model and crm.date_select_popup() in application.js.

Sat, Feb 7, 2008
---------------------------------------------------------------------
- Created initial implementation of adding a new task (all except specific date).
- Refactored tasks code to simplify filtering.