@@ -24,6 +24,7 @@ class LeadsController < ApplicationController
   #----------------------------------------------------------------------------
   def show
     @lead = Lead.find(params[:id])
+    @comment = Comment.new
 
     respond_to do |format|
       format.html # show.html.erb
