@@ -30,6 +30,7 @@ class Account < ActiveRecord::Base
 
   uses_mysql_uuid
   uses_user_permissions
+  acts_as_commentable
   acts_as_paranoid
 
   validates_presence_of :name, :message => "^Please specify account name."
