@@ -1,6 +1,8 @@
 #confirm{ hidden }
 .title_menu#menu
-  = link_to("List", accounts_path) + " | "
   = link_to("Edit", edit_account_path(@account)) + " | "
   = link_to_function("Delete?", confirm_delete(@account))
 .title= @account.name
+
+= render :partial => "common/new_comment", :locals => { :commentable => @account }
+= render :partial => "common/comment", :collection => @account.comments
