@@ -1,0 +1,17 @@
+- class_name = commentable.class.name.downcase
+.comment#comment_new
+  .avatar
+    = link_to(image_tag("1x1.gif", :size => "30x30", :style => "border: 1px silver solid;"), "#")
+  #post{ hidden_if(session["#{class_name}_new_comment"].nil?) }
+    - remote_form_for(@comment) do |f|
+      = hidden_field_tag "comment[user_id]", @current_user.id
+      = hidden_field_tag "comment[commentable_id]", commentable.id
+      = hidden_field_tag "comment[commentable_type]", class_name.capitalize
+      = f.text_area :comment, :style => "width:500px; height:30px;"
+      %div{:style => "padding:6px 0px 0px 40px;"}
+        = f.submit "Post Note"
+        or
+        = link_to_remote("Cancel", :url => send("new_#{class_name}_comment_url", commentable), :method => :get, :with => "'cancel=true'")
+  #ask{ hidden_if(session["#{class_name}_new_comment"])}
+    = link_to_remote("Post new note...", :url => send("new_#{class_name}_comment_url", commentable), :method => :get)
+
