@@ -1,7 +1,8 @@
 #confirm{ hidden }
 .title_menu#menu
-  = link_to("List", contacts_path) + " | "
   = link_to("Edit", edit_contact_path(@contact)) + " | "
   = link_to_function("Delete?", confirm_delete(@contact))
 .title= @contact.full_name
 
+= render :partial => "common/new_comment", :locals => { :commentable => @contact }
+= render :partial => "common/comment", :collection => @contact.comments
