@@ -3,12 +3,7 @@
   = link_to("Convert", convert_lead_path(@lead)) + " | "
   = link_to("Edit", edit_lead_path(@lead)) + " | "
   = link_to_function("Delete?", confirm_delete(@lead))
-.title
-  = @lead.full_name
-  / %div{:style => "font-size:12px; font-weight:normal; color:#6f6f6f; padding-left: 16px"}
-  /   Sales Manager at Lehner Corkery, Inc.
-  / %div{:style => "font-size:12px; font-weight:normal; color:#6f6f6f; padding-left: 16px"}
-  /   = link_to "johndoe@example.com", "#"
-  /   <br>Phone: (408)555-1212<br>
-  /   Mobile: (408)555-1213
+.title= @lead.full_name
 
+= render :partial => "common/new_comment", :locals => { :commentable => @lead }
+= render :partial => "common/comment", :collection => @lead.comments
