@@ -1,6 +1,8 @@
 #confirm{ hidden }
 .title_menu#menu
-  = link_to("List", opportunities_path) + " | "
   = link_to("Edit", edit_opportunity_path(@opportunity)) + " | "
   = link_to_function("Delete?", confirm_delete(@opportunity))
 .title= @opportunity.name
+
+= render :partial => "common/new_comment", :locals => { :commentable => @opportunity }
+= render :partial => "common/comment", :collection => @opportunity.comments
